--- a/src/app/components/splash/splash.component.html
+++ b/src/app/components/splash/splash.component.html
@@ -1,16 +1,18 @@
 
 <ion-content>
   <br>
-  <div class="ion-text-center text-animated">
-    <ion-label>DANIELA MORENO</ion-label>
+  <div class="ion-text-center tracking-in-expand-fwd">
+    <!-- <ion-label>DANIELA MORENO</ion-label> -->
+    <h1>DANIELA MORENO</h1>
   </div>
 
   
   <!-- <label class="text-animated ionic-text-center">DANIELA MORENO</label> -->
-  <div class="container ion-text-center">
+  <div class="rotate-center ion-text-center">
     <img src="../../../assets/icon.png">
   </div>
-  <div class="ion-text-center text-animated2">
-    <ion-label>4 A</ion-label>
+  <div class="ion-text-center tracking-in-expand-fwd-top">
+    <!-- <ion-label>4 A</ion-label> -->
+    <h1>4 A</h1>
   </div>
 </ion-content>
