--- a/src/app/components/splash/splash.component.scss
+++ b/src/app/components/splash/splash.component.scss
@@ -2,15 +2,17 @@ ion-content{
     --background:black;
 }
 
-.container{
-    -webkit-animation:rotate-scale-down 2s linear both;animation:rotate-scale-down 2s linear both;
-height: 100px;
+
+.rotate-center{animation:rotate-center 2s ease-in-out both;
+    height: 100px;
 margin-top:60%;
 }
 
-.text-animated{
-    animation:tracking-in-expand-fwd-top .8s cubic-bezier(.215,.61,.355,1.000) both
-}
-.text-animated2{
-    animation:tracking-in-expand-fwd-top .8s cubic-bezier(.215,.61,.355,1.000) both
-}
+
+.tracking-in-expand-fwd{animation:tracking-in-expand-fwd 2s cubic-bezier(.215,.61,.355,1.000) both}
+.tracking-in-expand-fwd-top{animation:tracking-in-expand-fwd-top .8s cubic-bezier(.215,.61,.355,1.000) both;
+    margin-top:80%;}
+
+@keyframes tracking-in-expand-fwd-top{0%{letter-spacing:-.5em;transform:translateZ(-700px) translateY(-500px);opacity:0}40%{opacity:.6}100%{transform:translateZ(0) translateY(0);opacity:1}}
+@keyframes rotate-center{0%{transform:rotate(0)}100%{transform:rotate(360deg)}}
+@keyframes tracking-in-expand-fwd{0%{letter-spacing:-.5em;transform:translateZ(-700px);opacity:0}40%{opacity:.6}100%{transform:translateZ(0);opacity:1}}
