--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -34,30 +34,32 @@
   </div> -->
   
   <div class="wrapper">
-    <div class="logo"> <img src="https://www.freepnglogos.com/uploads/sparkle-png/circle-fireworks-purple-sparkle-transparent-background-0.png" alt=""> </div>
+    <div class="logo"> <img style="background-color: black;"src="../../../assets/icon.png" alt=""> </div>
     <div class="text-center mt-4 name"> Moreno App </div>
     <form class="p-3 mt-3" [formGroup]="formulario" (ngSubmit)="Loguear()">
         <div class="form-field d-flex align-items-center"> 
           <span class="far fa-user"></span>  
            <input type="text" class="formControl" placeholder="Email" formControlName="Email" required>
-           <span class="text-danger" *ngIf="formulario.get('Email')?.hasError('required') && formulario.get('Email')?.touched">El Email es requerido.</span> 
-                                    <span class="text-danger" *ngIf="formulario.get('Email')?.hasError('pattern') && formulario.get('Email')?.touched">El Email debe tener x.</span>
+           
           </div>
+          <span class="text-danger" *ngIf="formulario.get('Email')?.hasError('required') && formulario.get('Email')?.touched">El Email es requerido.</span> 
+                                    <span class="text-danger" *ngIf="formulario.get('Email')?.hasError('pattern') && formulario.get('Email')?.touched">El Email debe tener x.</span>
         <div class="form-field d-flex align-items-center"> 
           <span class="fas fa-key"></span> 
           <input type="password" class="formControl" placeholder="Password" formControlName="Password" required>
-          <span class="text-danger" *ngIf="formulario.get('Password')?.hasError('required') && formulario.get('Password')?.touched">La contraseña es requerida.</span>
-         </div>  
+         
+         </div>
+         <span class="text-danger" *ngIf="formulario.get('Password')?.hasError('required') && formulario.get('Password')?.touched">La contraseña es requerida.</span>  
         <!-- <input type="button" class="btn btnPrimary" value="Logueate" (click)="authService.SignIn(userName.value, userPassword.value)"> -->
-        <ion-button color="primary" type="submit" shape="round" expand="block" [disabled]="formulario.invalid">Logueate</ion-button>
+        <ion-button size="small" color="primary" type="submit" shape="round" expand="block" [disabled]="formulario.invalid">Logueate</ion-button>
     </form>
     <!-- <ion-button color="success" shape="round" expand="block" (click)="LoguearConGoogle()">Log in con Google</ion-button>
     
     <ion-button color="danger" routerLink="/forgot-password" shape="round"  expand="block">Olvidaste contraseña</ion-button>
     <ion-button color="warning" shape="round" expand="block" routerLink="/register-user">Registrate</ion-button> -->
-    <ion-button color="success" shape="round" expand="block" (click)="Sereneis()">Usuario 1</ion-button>
-    <ion-button color="danger" shape="round"  expand="block" (click)="Irina()">Usuario 2</ion-button>
-    <ion-button color="warning"shape="round" expand="block" (click)="Denu()">Usuario 3</ion-button>
+    <ion-button size="small" color="success" shape="round" expand="block" (click)="Sereneis()">Usuario 1</ion-button>
+    <ion-button size="small" color="danger" shape="round"  expand="block" (click)="Irina()">Usuario 2</ion-button>
+    <ion-button size="small" color="warning"shape="round" expand="block" (click)="Denu()">Usuario 3</ion-button>
     <!-- <div class="text-center fs-6" (click)="authService.GoogleAuth()">  <span class="text-warning">Log in con Google</span>  </div> -->
     <!-- <div class="text-center fs-6" >  <span class="text-danger"routerLink="/forgot-password">Olvidaste tu contraseña?</span> o  <span>No tenes una cuenta?<span class="redirect text-success" routerLink="/register-user"> Registrate</span></span> </div> -->
 </div>
